--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "http": "^0.0.0"
+    "firebase": "^4.7.0",
+    "http": "^0.0.0",
+    "socket.io": "^2.0.4"
   }
 }
